- `componentWillMount` changed to `componentDidMount`; - renamed state `pointerShift` into `pointerCSS`; - toolbar margin moved from props to real css; - fixed case with body margin; - reverted usage of separate class for pointer;

--- a/draft-js-inline-toolbar-plugin/src/toolbarStyles.css
+++ b/draft-js-inline-toolbar-plugin/src/toolbarStyles.css
@@ -1,4 +1,5 @@
 .toolbar {
+  margin: 0 5px;
   transform: translate(-50%) scale(0);
   position: absolute;
   border: 1px solid #ddd;
